 * Changed the names of Inputs to include their form names so they can be unique in JS state (#154).
 * Added unique IDs to all HTML input controls (#154).
 * Added name_discriminator kwarg to PrimitiveInputs for distinguishing same-named inputs.
 * Removed the in_production kwarg for StoredConfiguration (#174). Rather use strict_checking.

 -- Iwan Vosloo <iwan@reahl.org>  Thu, 13 Dec 2018 15:15:00 +0200


python-reahl (4.0.5) unstable; urgency=low

 * Fixed forgotten import #230.
 * Added a workaround for https://bugs.python.org/issue18378 (#221).
 * Updated migration tutorial #181.
 * Added more documentation and the reahl componentinfo command #226.
 * Move feature examples and tests back into reahl-doc #190.
 * Updated wording on registration pages #208.
 * Updated docs to explain Fields handling input #192.
 * Deal better with email connection errors.

 -- Iwan Vosloo <iwan@reahl.org>  Thu, 11 Dec 2018 12:00:00 +0200


python-reahl (4.0.4) unstable; urgency=low

 * Added Field.with_label #185.
 * Renamed Rename and expose in_production kwarg to strict_checking and expose it #174.
 * Added reahl exportstatic #175.
 * Added DeferredDefault for configs #167.
 * Made reahl-mailutil a runtime dependency of reahl-web #145.
 * Don't run ftp-archive unnecessarily #143.
 * Fixed brand-text link of NavBar #205.
 * Deal with deprecation of collections.abc #169.
 * Fix reahl-servesmtp incorrect arguments #160.
 * Use expanduser('~') in some examples #159.
 * Added --nosign option to reahl build #152.
 * Changed example database default location and name #167.
 * Improved wording of DangerousDefault warnings #161.
 * Various documentation changes.

 -- Iwan Vosloo <iwan@reahl.org>  Thu, 22 Nov 2018 14:22:00 +0200


python-reahl (4.0.2) unstable; urgency=low

 * Fixed Vagrantfile to wait for apt when starting up #123.
 * Fixed reahl script to use correct sys.argv[0] #124.
 * Relaxed dependency upper version limits on pip, setuptools, pytest #125.
