@@ -23,6 +23,7 @@ python-reahl (5.0) unstable; urgency=low
  * Added unique IDs to all HTML input controls (#154).
  * Added name_discriminator kwarg to PrimitiveInputs for distinguishing same-named inputs.
  * Removed the in_production kwarg for StoredConfiguration (#174). Rather use strict_checking.
+ * ReahlWSGIApplication can start itself when needed, no need to call start() anymore.
 
  -- Iwan Vosloo <iwan@reahl.org>  Thu, 13 Dec 2018 15:15:00 +0200
 
